# tree-sitter-kickassembler

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kickassembler.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kickassembler/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKickAssembler/: kickassembler.h
bindings/swift/TreeSitterKickAssemblerTests/: TreeSitterKickAssemblerTests.swift
examples/: smoke.asm
src/: grammar.json  node-types.json  parser.c
test/corpus/: smoke.txt
