[package]
name = "tree-sitter-kickassembler"
description = "Tree sitter parser for Kick Assembler"
version = "0.1.0"
authors = ["Chrx"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kickassembler"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/chrx/tree-sitter-kickassembler"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
